@@ -48,7 +48,7 @@ describe( 'GeneralSettingsSection', () => {
 		global.wcSettings = { currency: { code: 'EUR' } };
 		useGetCapabilities.mockReturnValue( {
 			card_payments: 'active',
-			giropay_payments: 'active',
+			alipay_payments: 'active',
 		} );
 		useManualCapture.mockReturnValue( [ false ] );
 		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'card', 'link' ] );
@@ -132,17 +132,11 @@ describe( 'GeneralSettingsSection', () => {
 	it( 'should allow to enable a payment method when UPE is enabled', () => {
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
-			'giropay',
-			'sofort',
+			'alipay',
 			'sepa_debit',
 		] );
 		useGetOrderedPaymentMethodIds.mockReturnValue( {
-			orderedPaymentMethodIds: [
-				'card',
-				'giropay',
-				'sofort',
-				'sepa_debit',
-			],
+			orderedPaymentMethodIds: [ 'card', 'alipay', 'sepa_debit' ],
 			setOrderedPaymentMethodIds: jest.fn(),
 			saveOrderedPaymentMethodIds: jest.fn(),
 		} );
@@ -158,26 +152,25 @@ describe( 'GeneralSettingsSection', () => {
 			</UpeToggleContext.Provider>
 		);
 
-		const giropayCheckbox = screen.getByRole( 'checkbox', {
-			name: /giropay/,
+		const alipayCheckbox = screen.getByRole( 'checkbox', {
+			name: /Alipay/,
 		} );
 
 		expect( updateEnabledMethodsMock ).not.toHaveBeenCalled();
-		expect( giropayCheckbox ).not.toBeChecked();
+		expect( alipayCheckbox ).not.toBeChecked();
 
-		userEvent.click( giropayCheckbox );
+		userEvent.click( alipayCheckbox );
 
 		expect( updateEnabledMethodsMock ).toHaveBeenCalledWith( [
 			'card',
-			'giropay',
+			'alipay',
 		] );
 	} );
 
 	it( 'should allow to enable a payment method when UPE is disabled', () => {
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
-			'giropay',
-			'sofort',
+			'alipay',
 			'sepa_debit',
 		] );
 		const updateEnabledMethodsMock = jest.fn();
@@ -186,12 +179,7 @@ describe( 'GeneralSettingsSection', () => {
 			updateEnabledMethodsMock,
 		] );
 		useGetOrderedPaymentMethodIds.mockReturnValue( {
-			orderedPaymentMethodIds: [
-				'card',
-				'giropay',
-				'sofort',
-				'sepa_debit',
-			],
+			orderedPaymentMethodIds: [ 'card', 'alipay', 'sepa_debit' ],
 			setOrderedPaymentMethodIds: jest.fn(),
 			saveOrderedPaymentMethodIds: jest.fn(),
 		} );
@@ -202,26 +190,25 @@ describe( 'GeneralSettingsSection', () => {
 			</UpeToggleContext.Provider>
 		);
 
-		const giropayCheckbox = screen.getByRole( 'checkbox', {
-			name: /giropay/,
+		const alipayCheckbox = screen.getByRole( 'checkbox', {
+			name: /Alipay/,
 		} );
 
 		expect( updateEnabledMethodsMock ).not.toHaveBeenCalled();
-		expect( giropayCheckbox ).not.toBeChecked();
+		expect( alipayCheckbox ).not.toBeChecked();
 
-		userEvent.click( giropayCheckbox );
+		userEvent.click( alipayCheckbox );
 
 		expect( updateEnabledMethodsMock ).toHaveBeenCalledWith( [
 			'card',
-			'giropay',
+			'alipay',
 		] );
 	} );
 
 	it( 'should show modal to disable a payment method', () => {
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
-			'giropay',
-			'sofort',
+			'alipay',
 			'sepa_debit',
 		] );
 		const updateEnabledMethodsMock = jest.fn();
@@ -259,8 +246,7 @@ describe( 'GeneralSettingsSection', () => {
 	it( 'should not allow to disable a payment method when canceled via modal', () => {
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
-			'giropay',
-			'sofort',
+			'alipay',
 			'sepa_debit',
 		] );
 		const updateEnabledMethodsMock = jest.fn();
@@ -291,8 +277,7 @@ describe( 'GeneralSettingsSection', () => {
 	it( 'should allow to disable a payment method when confirmed via modal', () => {
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
-			'giropay',
-			'sofort',
+			'alipay',
 			'sepa_debit',
 		] );
 		const updateEnabledMethodsMock = jest.fn();
@@ -322,10 +307,7 @@ describe( 'GeneralSettingsSection', () => {
 
 	it( 'does not display the payment method checkbox when currency is not supprted', () => {
 		global.wcSettings = { currency: { code: 'USD' } };
-		useGetAvailablePaymentMethodIds.mockReturnValue( [
-			'card',
-			'giropay',
-		] );
+		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'card', 'alipay' ] );
 		render(
 			<UpeToggleContext.Provider value={ { isUpeEnabled: true } }>
 				<GeneralSettingsSection />
@@ -345,10 +327,7 @@ describe( 'GeneralSettingsSection', () => {
 	} );
 
 	it( 'does not display the payment method checkbox when manual capture is enabled', () => {
-		useGetAvailablePaymentMethodIds.mockReturnValue( [
-			'card',
-			'giropay',
-		] );
+		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'card', 'alipay' ] );
 		useManualCapture.mockReturnValue( [ true ] );
 		render(
 			<UpeToggleContext.Provider value={ { isUpeEnabled: true } }>
@@ -363,7 +342,7 @@ describe( 'GeneralSettingsSection', () => {
 		).toBeInTheDocument();
 		expect(
 			screen.queryByRole( 'checkbox', {
-				name: 'giropay',
+				name: 'Alipay',
 			} )
 		).not.toBeInTheDocument();
 	} );
@@ -379,17 +358,17 @@ describe( 'GeneralSettingsSection', () => {
 					name: 'Card',
 					description: 'Pay with Card',
 				},
-				giropay: {
-					name: 'Giropay',
-					description: 'Pay with Giropay',
+				alipay: {
+					name: 'Alipay',
+					description: 'Pay with Alipay',
 				},
 			},
 			isCustomizing: false,
 			customizePaymentMethod: customizePaymentMethodMock,
 		} );
-		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'giropay' ] );
+		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'alipay' ] );
 		useGetOrderedPaymentMethodIds.mockReturnValue( {
-			orderedPaymentMethodIds: [ 'giropay' ],
+			orderedPaymentMethodIds: [ 'alipay' ],
 			setOrderedPaymentMethodIds: jest.fn(),
 			saveOrderedPaymentMethodIds: jest.fn(),
 		} );
@@ -402,7 +381,7 @@ describe( 'GeneralSettingsSection', () => {
 
 		expect(
 			screen.queryByRole( 'checkbox', {
-				name: 'giropay',
+				name: 'Alipay',
 			} )
 		).toBeInTheDocument();
 		expect(
@@ -418,9 +397,9 @@ describe( 'GeneralSettingsSection', () => {
 		);
 
 		// Expect the customization section to be open
-		expect( screen.getByLabelText( 'Name' ) ).toHaveValue( 'Giropay' );
+		expect( screen.getByLabelText( 'Name' ) ).toHaveValue( 'Alipay' );
 		expect( screen.getByLabelText( 'Description' ) ).toHaveValue(
-			'Pay with Giropay'
+			'Pay with Alipay'
 		);
 		expect(
 			screen.queryByRole( 'button', {
@@ -455,9 +434,9 @@ describe( 'GeneralSettingsSection', () => {
 	} );
 
 	it( 'should display customization section in the payment method when UPE is enabled', () => {
-		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'giropay' ] );
+		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'alipay' ] );
 		useGetOrderedPaymentMethodIds.mockReturnValue( {
-			orderedPaymentMethodIds: [ 'giropay' ],
+			orderedPaymentMethodIds: [ 'alipay' ],
 			setOrderedPaymentMethodIds: jest.fn(),
 			saveOrderedPaymentMethodIds: jest.fn(),
 		} );
@@ -470,7 +449,7 @@ describe( 'GeneralSettingsSection', () => {
 
 		expect(
 			screen.queryByRole( 'checkbox', {
-				name: 'giropay',
+				name: 'Alipay',
 			} )
 		).toBeInTheDocument();
 		expect(
@@ -481,12 +460,9 @@ describe( 'GeneralSettingsSection', () => {
 	} );
 
 	it( 'displays the payment method checkbox when manual capture is disabled', () => {
-		useGetAvailablePaymentMethodIds.mockReturnValue( [
-			'card',
-			'giropay',
-		] );
+		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'card', 'alipay' ] );
 		useGetOrderedPaymentMethodIds.mockReturnValue( {
-			orderedPaymentMethodIds: [ 'card', 'giropay' ],
+			orderedPaymentMethodIds: [ 'card', 'alipay' ],
 			setOrderedPaymentMethodIds: jest.fn(),
 			saveOrderedPaymentMethodIds: jest.fn(),
 		} );
@@ -504,16 +480,13 @@ describe( 'GeneralSettingsSection', () => {
 		).toBeInTheDocument();
 		expect(
 			screen.queryByRole( 'checkbox', {
-				name: 'giropay',
+				name: 'Alipay',
 			} )
 		).toBeInTheDocument();
 	} );
 
 	it( 'should not render payment methods that are not part of the account capabilities', () => {
-		useGetAvailablePaymentMethodIds.mockReturnValue( [
-			'card',
-			'giropay',
-		] );
+		useGetAvailablePaymentMethodIds.mockReturnValue( [ 'card', 'alipay' ] );
 		useGetCapabilities.mockReturnValue( {
 			card_payments: 'active',
 		} );
@@ -526,7 +499,7 @@ describe( 'GeneralSettingsSection', () => {
 
 		expect(
 			screen.queryByRole( 'checkbox', {
-				name: 'giropay',
+				name: 'Alipay',
 			} )
 		).not.toBeInTheDocument();
 	} );
@@ -537,7 +510,7 @@ describe( 'GeneralSettingsSection', () => {
 		} );
 		useGetAvailablePaymentMethodIds.mockReturnValue( [
 			'card',
-			'giropay',
+			'alipay',
 			'sepa_debit',
 			'sofort',
 			'eps',
