@@ -122,7 +122,7 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 					'bancontact_payments' => 'active',
 					'card_payments'       => 'active',
 					'eps_payments'        => 'active',
-					'giropay_payments'           => 'active',
+					'alipay_payments'            => 'active',
 					'ideal_payments'             => 'active',
 					'p24_payments'               => 'active',
 					'sepa_debit_payments'        => 'active',
@@ -357,7 +357,7 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 				'enabled_payment_method_ids',
 				'upe_checkout_experience_accepted_payments',
 				[ 'card' ],
-				[ 'card', 'giropay' ],
+				[ 'card', 'alipay' ],
 				[ 'foo' ],
 				true,
 			],
